# compose

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  README.md  dependency-graph-executor.md  prek.toml  pyproject.toml
.claude/commands/: deploy.md  kickoff.md  pr.md
.claude/skills/release-compose/: SKILL.md
.github/: CODEOWNERS  release-drafter-config.yml
.github/actions/load-python-cache/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: deploy-release.yml  integration-test.yml  publish.yml  release-drafter.yml  release.yml  run-tests.yml  test.yml  unit-test.yml  update-cache.yml  update-python-cache.yml
compose/: __init__.py  asyncio.py  compat.py  concurrent.py  container.py  dag.py  datetime.py  deprecation.py  entity.py  enums.py  exceptions.py  field.py  func.py  logging.py  model.py  pagination.py  pipeline.py  queue_pipeline.py  settings.py  stream.py  typing.py  utils.py
compose/_testing/: __init__.py
compose/audio/: __init__.py  overlay.py
compose/auth/: __init__.py  authorization_server.py  token_decoder.py  token_issuer.py  vo.py
compose/aws/: __init__.py  lambda_client.py  object_store.py  url_generator.py
compose/command/: __init__.py  command.py
compose/compat/: __init__.py  model.py
compose/db/: __init__.py  mongo.py
compose/dependency/: __init__.py  container.py  provider.py  wiring.py
compose/di/: __init__.py  container.py
compose/di/dependency_injector/: __init__.py  wiring.py
compose/di/dishka/: __init__.py
compose/enums/: __init__.py  env.py
compose/event/: __init__.py  event.py
compose/fastapi/: __init__.py  depends.py  dishka.py  exception_handler.py  openapi.py  param.py  routing.py  security.py  sentry.py  utils.py  wiring.py
compose/framework/fastapi/: __init__.py  depends.py  error_handler.py  exception_handler.py  openapi.py  param.py  security.py  utils.py  wiring.py
compose/gunicorn/: __init__.py  settings.py
compose/httpx/: __init__.py
compose/httpx/auth/: api_key.py  header.py
compose/lock/: __init__.py  mongo.py
compose/lock/backend/: mongo.py
compose/messaging/: __init__.py  consumer.py  consumer_runner.py  event_bus.py  messagebus.py  model.py  publisher.py  signal_handler.py
compose/messaging/consumer/: fastapi.py  general.py  hook.py  types.py
compose/messaging/queue/: __init__.py  base.py  sqs.py
compose/monitoring/: logging.py
compose/opentelemetry/: __init__.py
compose/otel/: __init__.py  fastapi.py  meter_provider.py
compose/query/: __init__.py  base.py
compose/query/mongo/: __init__.py  query.py
compose/repository/: __init__.py  mongo.py  shortcut.py  sql.py
compose/schema/: __init__.py  extra.py  schema.py
compose/src/compose/: __init__.py
compose/testcontainers/: __init__.py  mongodb.py
compose/testing/: __init__.py  fixture.py  hook.py
compose/types/: __init__.py  byte_unit.py  datetime.py  duration.py  helper.py  helper_compat.py  input.py  object_id.py  primitive.py  url.py  vo.py  web.py
compose/uow/: __init__.py  mongo.py  sql.py
compose/v1/: container.py  field.py  pagination.py
compose/v1/repository/: base.py
compose/v1/schema/: extra.py  schema.py
compose/v1/types/: datetime.py
docs/: auth-guide.md  v2-migration-guide.md
docs/rationale/: 20260212-evaluable-vs-evaluate.md  20260213-error-message-criteria.md  20260226-public-api-naming-review.md
docs/specs/: 2026-04-08-dag-job-result-injection.md  2026-05-04-generic-message-queue.md  2026-05-04-types-v3-refactor.md  2026-07-02-list-validator.md  dishka-module.md
examples/fastapi_example/: Makefile  README.md  docker-compose.local.yml  pyproject.toml
examples/fastapi_example/docker/: Dockerfile
examples/fastapi_example/src/: constants.py  logging.py  settings.py
examples/fastapi_example/src/app/: creation.py  exceptions.py
examples/fastapi_example/src/dependency/: __init__.py  container.py  routing.py
examples/fastapi_example/src/user/: dependency.py
examples/fastapi_example/src/user/adapter/: repository.py
examples/fastapi_example/src/user/domain/: __init__.py  command.py  model.py  query.py
examples/fastapi_example/src/user/entrypoint/: __init__.py  api.py  router.py
examples/fastapi_example/src/user/schema/: response.py
examples/fastapi_example/src/user/service/: __init__.py  command_handler.py
examples/sql_example/: Makefile  README.md  docker-compose.local.yml  main.py  pyproject.toml
examples/sql_example/docker/: Dockerfile
examples/sql_example/src/: __init__.py  constants.py  logging.py  settings.py
examples/sql_example/src/app/: creation.py  main.py
examples/sql_example/src/dependency/: __init__.py  container.py
examples/sql_example/src/product/: dependency.py
examples/sql_example/src/product/adapter/: repository.py  table.py
examples/sql_example/src/product/domain/: command.py  model.py
examples/sql_example/src/product/entrypoint/: api.py
examples/sql_example/src/product/schema/: response.py
examples/sql_example/src/product/service/: __init__.py  command_handler.py
examples/sql_example/src/user/: dependency.py
examples/sql_example/src/user/adapter/: repository.py  table.py
examples/sql_example/src/user/domain/: model.py
examples/sql_example/src/user/entrypoint/: api.py
examples/sql_example/src/user/schema/: __init__.py  response.py
examples/sql_example/src/user/service/: __init__.py  command_handler.py
scripts/: setup-project.sh
tests/: conftest.py  test_base_model.py  test_base_model_copy.py  test_container.py  test_date_range.py  test_day_period.py  test_deprecated_alias.py  test_entity.py  test_execute_in_pool.py  test_func.py  test_pagination.py  test_unordered_partial.py
tests/asyncio/unit/: test_async_task_executor.py
tests/auth/unit/: test_token_decoder.py  test_token_issuer.py
tests/aws/unit/: test_lambda_client.py  (+1 more)
tests/compat/: test_model_dump.py  test_type_validator.py
tests/testing/: test_enums.py  test_get_fixture.py
tests/unit/: test_entity.py  test_pagination.py  test_types.py
tools/: fix_imports.py
(+186 files in other folders)
