[tool.poetry]
name = "compose"
version = "0.1.0"
description = ""
authors = ["pozalabs <contact@pozalabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
bson = "^0.5.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
