[tool.poetry]
name = "compose"
version = "0.1.0"
description = ""
authors = ["pozalabs <contact@pozalabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
bson = "^0.5.10"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
