[project]
name = "pozalabs-compose"
version = "3.3.0"
description = "Backend components for Pozalabs"
license = "MIT"
authors = [
    { name = "sunwoong", email = "sunwoong@pozalabs.com" },
    { name = "jeehoon", email = "jeehoon@pozalabs.com" },
    { name = "soyeon", email = "soyeon@pozalabs.com" },
    { name = "joowan", email = "joowan@pozalabs.com" },
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "pendulum>=3.2.0,<4.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
auth = ["authlib>=1.7.2,<2.0.0"]
aws = ["boto3>=1.43.36,<2.0.0"]
dependency-injector = ["dependency-injector>=4.49.1,<5.0.0"]
dishka = ["dishka>=1.10.1,<2"]
fastapi = ["fastapi>=0.138.1,<0.139.0"]
httpx = ["httpx>=0.28.1,<0.29.0"]
loguru = ["loguru>=0.7.3,<0.8.0"]
mongo = ["pymongo>=4.17.0,<5.0.0"]
otel = [
    "opentelemetry-api>=1.43.0,<2.0.0",
    "opentelemetry-sdk>=1.43.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0,<2.0.0",
    "opentelemetry-instrumentation>=0.64b0,<1.0.0",
]
sentry = ["sentry-sdk>=2.63.0,<3.0.0"]
sql = ["sqlalchemy>=2.0.51,<3.0.0"]

[tool.uv]
exclude-newer-package = { pydantic = false, pydantic-core = false }

[tool.hatch.build.targets.sdist]
include = ["compose"]

[tool.hatch.build.targets.wheel]
include = ["compose"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pozalabs-compose[auth,aws,dependency-injector,dishka,fastapi,httpx,loguru,mongo,otel,sentry,sql]",
    "pymongo[aws]>=4.17.0,<5.0.0",
    "pytest>=9.1.1,<10.0.0",
    "boto3-stubs-lite[essential,ssm]>=1.43.36,<2.0.0",
    "uvicorn[standard]>=0.49.0,<1.0.0",
    "gunicorn>=26.0.0,<27.0.0",
    "opentelemetry-test-utils>=0.64b0,<1.0.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0,<1.0.0",
    "testcontainers[mongodb]>=4.14.2,<5.0.0",
    "pytest-asyncio>=1.4.0",
    "moto[s3]>=5.2.2,<6.0.0",
    "pyrefly>=1.1.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "W",
    "RUF022",
    "RUF100",
    "RUF101",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = [
    "examples/fastapi_example",
]

[tool.pytest.ini_options]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
filterwarnings = "ignore::DeprecationWarning"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.workspace]
members = ["examples/*"]
