[project]
name = "fastapi-example"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "pendulum>=3.0.0,<4.0.0",
    "pymongo[aws]>=4.6.3,<5.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "dependency-injector>=4.43.0,<5.0.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic-settings>=2.3.3",
    "fastapi (>=0.115.11,<0.116.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
