[project]
name = "fastapi-example"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "pozalabs-compose",
    "pymongo[aws]>=4.6.3,<5.0.0",
    "uvicorn[standard]>=0.30.1",
    "fastapi>=0.115.11,<0.116.0",
    "loguru>=0.7.3,<0.8.0",
    "dishka>=1.9,<2",
]

[tool.uv.sources]
pozalabs-compose = { workspace = true }
