[project]
name = "fastapi-example"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "pozalabs-compose",
    "pymongo[aws]>=4.17.0,<5.0.0",
    "uvicorn[standard]>=0.49.0",
    "fastapi>=0.138.1,<0.139.0",
    "loguru>=0.7.3,<0.8.0",
    "dishka>=1.10.1,<2",
]

[tool.uv.sources]
pozalabs-compose = { workspace = true }

