[project]
name = "sql-example"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = []
dependencies = [
    "pendulum>=3.0.0,<4.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "authlib>=1.3.1,<2.0.0",
    "dependency-injector>=4.43.0,<5.0.0",
    "pydantic-settings>=2.3.3",
    "sqlalchemy>=2.0.0,<3.0.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
