[project]
name = "sql-example"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "pozalabs-compose",
    "sqlalchemy>=2.0.0,<3.0.0",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "loguru>=0.7.3",
]

[tool.uv.sources]
pozalabs-compose = { workspace = true }
