[project]
name = "sql-example"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = []
dependencies = [
    "pozalabs-compose",
    "sqlalchemy>=2.0.51,<3.0.0",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "loguru>=0.7.3",
]

[tool.uv.sources]
pozalabs-compose = { workspace = true }
